# global-it

./: README.md  extension.js  meson.build  metadata.json  panelMenu.js  prefs.js
adapters/: index.js
dbus/: backend.js  dbusMenu.js  mockMenu.js  registrar.js
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.global-it.gschema.xml
scripts/: hot-reload.sh  install-dev.sh  mock-dbusmenu-provider.js  reset-extension.sh  run-nested.sh  smoke-tests.sh
tests/: smoke.js
utils/: logger.js
